--- a/src/movies/entrypoints/templates/form.html
+++ b/src/movies/entrypoints/templates/form.html
@@ -38,6 +38,8 @@
         <input type="text" name="second"><br><br>
         <label for="third">Ingresa tu tercer género favorito</label>
         <input type="text" name="third"><br><br>
+        <label for="order">Si te gustaría que las películas se presentaran de forma ascendente, escribe 'S'</label>
+        <input type="text" name="order"><br><br>
         <input type="submit" value="Enviar">
     </form>
 </body>
